# EtlNexus

./: .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  design_idea.ts  docker-compose.prod.yml  docker-compose.yml  package-lock.json  project_plan.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_pipeline_usages.py  003_drop_dag_networks.py  004_drop_code_path.py  005_usage_etl_name.py  006_add_task_id_to_pipelines.py  007_add_resource_and_run_history.py  008_add_run_history_composite_index.py  009_add_dag_tasks.py  010_add_task_group_id.py  011_add_sensors.py  012_expand_run_history_metrics.py  013_add_execution_plan.py  014_add_documentation.py  015_add_users_teams.py  016_add_team_to_pipelines.py  017_add_visibility_grants.py  018_add_user_visibility_grants.py  019_add_grant_level.py  020_add_role_check_constraints.py  021_add_vg_indexes.py  022_add_unique_grant_constraint.py  023_datetime_timezone.py  024_run_history_tz.py  025_gin_trigram_indexes.py  026_tz_indexes_granted_by.py  027_add_pipeline_revisions.py  028_seed_bouncer_volumes.py  029_rename_sensors_to_bouncers.py  030_standardize_datetime_tz.py  031_run_history_snapshots.py  032_add_dag_id_index.py  033_composite_dag_start_date_index.py  034_add_failure_reason.py  035_add_tags.py  036_add_networks.py  037_pipeline_manual_entry.py  038_add_pipeline_logs.py  039_bouncer_team_fk_user_beta.py  040_add_feature_flags.py  (+2 more)
backend/app/: auth.py  cache.py  config.py  database.py  dependencies.py  enums.py  exceptions.py  logging_config.py  main.py  middleware.py  rate_limit.py
backend/app/integrations/: airflow_client.py  (+7 more)
backend/tests/: conftest.py  test_ai_service.py  test_airflow_client.py  test_airflow_sync_helpers.py  test_auth.py  test_auth_schema_helpers.py  test_base_repo.py  test_batch_pipeline_upsert.py  test_bouncer_service.py  test_cache.py  test_catalog_mirror_service.py  test_catalog_sync_service.py  test_consumer_service.py  test_dag_summary_service.py  test_graph_builder.py  test_integration.py  test_integration_expanded.py  test_log_parser.py  test_middleware.py  test_oidc_client.py  test_pipeline_service.py  test_resource_service.py  test_scheduler.py  test_schema_matrix_service.py  test_schemas.py  test_task_classifier.py  test_team_service.py  test_topology_service.py  test_usage_service.py  test_user_auth_service.py  test_visibility_enforcement.py  test_visibility_service.py
etlnexus-hooks/: README.md  pyproject.toml
(+816 files in other folders)
