[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etlnexus-hooks"
version = "0.1.0"
description = "Auto-instrumentation hooks for EtlNexus — emit structured log markers from BaseETL subclasses"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

# No hard dependencies — pyspark is expected in the Airflow environment
dependencies = []

[project.optional-dependencies]
spark = ["sparkmeasure>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/etlnexus_hooks"]
